--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/ioredis": "^4.26.4",
         "@types/joi": "^17.2.3",
         "@types/jsonwebtoken": "^8.5.1",
+        "@types/mime": "^2.0.3",
         "@types/multer": "^1.4.5",
         "@types/node": "^15.0.1",
         "@types/nodemailer": "^6.4.1",
@@ -31,6 +32,7 @@
         "typescript": "^4.2.4"
     },
     "dependencies": {
+        "aws-sdk": "^2.918.0",
         "bcryptjs": "^2.4.3",
         "celebrate": "^14.0.0",
         "class-transformer": "^0.4.0",
@@ -42,6 +44,7 @@
         "handlebars": "^4.7.7",
         "ioredis": "^4.27.2",
         "jsonwebtoken": "^8.5.1",
+        "mime": "^2.5.2",
         "multer": "^1.4.2",
         "nodemailer": "^6.6.0",
         "pg": "^8.6.0",
