--- a/package.json
+++ b/package.json
@@ -1,58 +1,64 @@
 {
-    "name": "api-vendas",
-    "version": "1.0.0",
-    "main": "index.js",
-    "license": "MIT",
-    "scripts": {
-        "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
-        "lint": "eslint . --ext .ts",
-        "lint-fix": "eslint . --ext .ts --fix",
-        "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
-    },
-    "devDependencies": {
-        "@types/bcryptjs": "^2.4.2",
-        "@types/cors": "^2.8.10",
-        "@types/express": "^4.17.11",
-        "@types/ioredis": "^4.26.4",
-        "@types/joi": "^17.2.3",
-        "@types/jsonwebtoken": "^8.5.1",
-        "@types/mime": "^2.0.3",
-        "@types/multer": "^1.4.5",
-        "@types/node": "^15.0.1",
-        "@types/nodemailer": "^6.4.1",
-        "@types/redis": "^2.8.28",
-        "@typescript-eslint/eslint-plugin": "^4.22.1",
-        "@typescript-eslint/parser": "^4.22.1",
-        "eslint": "^7.25.0",
-        "eslint-config-prettier": "6.15.0",
-        "eslint-plugin-prettier": "3.2.0",
-        "prettier": "^2.2.1",
-        "ts-node-dev": "^1.1.6",
-        "tsconfig-paths": "^3.9.0",
-        "typescript": "^4.2.4"
-    },
-    "dependencies": {
-        "aws-sdk": "^2.918.0",
-        "bcryptjs": "^2.4.3",
-        "celebrate": "^14.0.0",
-        "class-transformer": "^0.4.0",
-        "cors": "^2.8.5",
-        "date-fns": "^2.21.3",
-        "dotenv": "^9.0.2",
-        "express": "^4.17.1",
-        "express-async-errors": "^3.1.1",
-        "handlebars": "^4.7.7",
-        "ioredis": "^4.27.2",
-        "jsonwebtoken": "^8.5.1",
-        "mime": "^2.5.2",
-        "multer": "^1.4.2",
-        "nodemailer": "^6.6.0",
-        "pg": "^8.6.0",
-        "rate-limiter-flexible": "^2.2.2",
-        "redis": "^3.1.2",
-        "reflect-metadata": "^0.1.13",
-        "tsyringe": "^4.5.0",
-        "typeorm": "^0.2.32",
-        "typeorm-pagination": "^2.0.1"
-    }
+  "name": "api-vendas",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "lint": "eslint . --ext .ts",
+    "lint-fix": "eslint . --ext .ts --fix",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
+    "@types/ioredis": "^4.26.4",
+    "@types/jest": "^26.0.23",
+    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/mime": "^2.0.3",
+    "@types/multer": "^1.4.5",
+    "@types/node": "^15.0.1",
+    "@types/nodemailer": "^6.4.1",
+    "@types/redis": "^2.8.28",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-plugin-prettier": "3.2.0",
+    "jest": "^27.0.2",
+    "prettier": "^2.2.1",
+    "ts-jest": "^27.0.1",
+    "ts-node-dev": "^1.1.6",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.918.0",
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^14.0.0",
+    "class-transformer": "^0.4.0",
+    "cors": "^2.8.5",
+    "date-fns": "^2.21.3",
+    "dotenv": "^9.0.2",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
+    "ioredis": "^4.27.2",
+    "jsonwebtoken": "^8.5.1",
+    "mime": "^2.5.2",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.6.0",
+    "pg": "^8.6.0",
+    "rate-limiter-flexible": "^2.2.2",
+    "redis": "^3.1.2",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.5.0",
+    "typeorm": "^0.2.32",
+    "typeorm-pagination": "^2.0.1",
+    "uuid": "^8.3.2"
+  }
 }
